--- a/new/.env
+++ b/new/.env
@@ -1,4 +1,4 @@
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_SERVER=
-POSTGRES_DB=
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=admin
+POSTGRES_SERVER=postgres
+POSTGRES_DB=pets
