--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,10 +11,10 @@ services:
     image: postgres
     restart: always
     environment:
-      - POSTGRES_USER=
-      - POSTGRES_PASSWORD=
-      - POSTGRES_SERVER=
-      - POSTGRES_DB=
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_SERVER=${POSTGRES_SERVER}
+      - POSTGRES_DB=${POSTGRES_DB}
     ports:
       - 1234:1234
     depends_on:
