--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
 fastapi==0.87.0
+starlette==0.21.0
+pydantic==1.10.4
 uvicorn==0.20.0
+ormar==0.12.1
+orjson==3.8.8
+sqlalchemy-orm==1.2.4
+PyYAML==6.0
+loguru==0.6.0
