--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,6 @@ services:
       - POSTGRES_SERVER=${POSTGRES_SERVER}
       - POSTGRES_DB=${POSTGRES_DB}
     ports:
-      - 5432:5432
+      - ${POSTGRES_PORT}
     depends_on:
       - backend
