--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,3 +1,4 @@
+asyncpg==0.27.0
 databases==0.6.2
 fastapi==0.95.1
 loguru==0.6.0
@@ -8,3 +9,4 @@ PyYAML==6.0
 sqlalchemy-orm==1.2.4
 starlette==0.26.1
 uvicorn==0.20.0
+psycopg2-binary==2.9.6
