--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,8 @@ version: '3.8'
 
 services:
   backend:
-    build: /app
-    command: python3 main.py
+    build: ./app
+    command: python ./main.py
     ports:
       - 3000:3000
 
@@ -11,11 +11,11 @@ services:
     image: postgres
     restart: always
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_SERVER=${POSTGRES_SERVER}
-      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin
+      - POSTGRES_SERVER=postgres
+      - POSTGRES_DB=pets
     ports:
-      - ${POSTGRES_PORT}
+      - 5432:5432
     depends_on:
       - backend
