--- a/app/appsettings.yaml
+++ b/app/appsettings.yaml
@@ -7,7 +7,7 @@ uvicorn:
 db_connection:
   postgres_user: admin
   postgres_password: admin
-  postgres_server: postgres
+  postgres_server: postgres-db
   postgres_database: pets
   postgres_port: 5432
 
