--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
 
   database:
     container_name: postgres-db
-    image: postgres
+    image: postgres:latest
     restart: always
     environment:
       POSTGRES_USER: admin
